@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-19T00:46:55Z",
-  "count_outdated" : 6121,
-  "uniques_outdated" : 1300,
+  "timestamp" : "2025-12-19T12:18:06Z",
+  "count_outdated" : 6124,
+  "uniques_outdated" : 1301,
   "count" : 6244,
   "uniques" : 1318,
   "views" : [
-    {
-      "timestamp": "2025-12-05T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-08T00:00:00Z",
       "count": 38,
