@@ -1,12 +1,7 @@
 {
-  "count": 123,
-  "uniques": 12,
+  "count": 120,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2025-12-05T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-08T00:00:00Z",
       "count": 38,
