@@ -1,3 +1,12 @@
+2025-12-19T12:18:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20369786313 # 1375
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
+* notice: last 14d: unq all: 11 120
+* notice: prev accum: outdated-unq outdated-all / unq all: 1300 6121 / 1318 6244
+* notice: next accum: outdated-unq outdated-all / unq all: 1301 6124 / 1318 6244
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-05] / []
+
 2025-12-19T00:46:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20356006863 # 1374
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
